Closed Bug 1316778 Opened 9 years ago Closed 9 years ago

ES3 compressed textures extension name is now _etc

Categories

(Core :: Graphics: CanvasWebGL, defect)

51 Branch
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla53
Tracking Status
firefox51 --- fixed
firefox52 --- fixed
firefox53 --- fixed

People

(Reporter: jgilbert, Assigned: jgilbert)

References

Details

(Keywords: dev-doc-complete, Whiteboard: gfx-noted)

Attachments

(2 files)

No description provided.
Attachment #8809671 - Flags: review?(kyle) → review+
Comment on attachment 8809670 [details] Bug 1316778 - Update ES3 compressed format ext name to _etc. - https://reviewboard.mozilla.org/r/92214/#review92558
Attachment #8809670 - Flags: review?(ethlin) → review+
Pushed by jgilbert@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/23f093950ea2 Update ES3 compressed format ext name to _etc. - r=ethlin https://hg.mozilla.org/integration/mozilla-inbound/rev/4402b0c5fcb2 Update IDL and bindings. - r=qdot
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla53
Comment on attachment 8809670 [details] Bug 1316778 - Update ES3 compressed format ext name to _etc. - Approval Request Comment [Feature/Bug causing the regression]: webgl2 [User impact if declined]: [Is this code covered by automated tests?]: [Has the fix been verified in Nightly?]: [Needs manual test from QE? If yes, steps to reproduce]: [List of other uplifts needed for the feature/fix]: [Is the change risky?]: [Why is the change risky/not risky?]: [String changes made/needed]: All patches in bug.
Attachment #8809670 - Flags: approval-mozilla-beta?
Attachment #8809670 - Flags: approval-mozilla-aurora?
Comment on attachment 8809670 [details] Bug 1316778 - Update ES3 compressed format ext name to _etc. - Fix a WebGL 2 issue. Beta51+ and Aurora52+. Should be in 51 beta 6.
Attachment #8809670 - Flags: approval-mozilla-beta?
Attachment #8809670 - Flags: approval-mozilla-beta+
Attachment #8809670 - Flags: approval-mozilla-aurora?
Attachment #8809670 - Flags: approval-mozilla-aurora+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: