Bug 1316778 - Update ES3 compressed format ext name to _etc. - r=ethlin

MozReview-Commit-ID: CEBhyYXkLKa